[package]
name = "bljbyegui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.0"
calamine = "0.22.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
chrono = "0.4.26"
ssh2 = "0.9.4"
crossbeam = "0.8.2"
rusqlite = { version = "0.30.0", features = ["bundled"] }
rfd = "0.12"
once_cell = "1.19.0"
